Scenario import script bugfixes, cleaned up 'main.js' and 'task.xhtml'

--- a/src/main/webapp/admin.xhtml
+++ b/src/main/webapp/admin.xhtml
@@ -127,9 +127,9 @@ xmlns:p="http://primefaces.org/ui">
        <p:commandButton value="#{txt['ADMINTREE.REFRESH']}" update="exerciseTree" styleClass="tree_button"
        actionListener="#{t.updateTree}" />
        <p:commandButton value="#{txt['ADMINTREE.EXPAND']}" styleClass="tree_button"
-       onclick="expand_tree()" />
+       onclick="expandTree()" />
        <p:commandButton value="#{txt['ADMINTREE.COLLAPSE']}" styleClass="tree_button"
-       onclick="collapse_tree()" />
+       onclick="collapseTree()" />
        <!-- TODO: Help-Button -->
        <!--
               <p:commandButton value="#{txt['HELP']}" styleClass="tree_button"
