--- a/src/main/webapp/errorpages/permission_denied.xhtml
+++ b/src/main/webapp/errorpages/permission_denied.xhtml
@@ -24,11 +24,12 @@
 <ui:composition template="/templates/errorpage.xhtml" xmlns="http://www.w3.org/1999/xhtml"
 xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html"
 xmlns:p="http://primefaces.org/ui">
+ <!-- ************************************************************************ -->
  <ui:define name="header_text">
   <span class="error">#{txt['SESSION.PERMISSION']}</span>
-  <script type="text/javascript">synctime=false; jQuery.ajaxSetup({ error: handleXhrError }); function
-  handleXhrError(xhr){}; setTimeout("endAjaxStatus()", 500);</script>
+  <script type="text/javascript">synctime=false;setTimeout("endAjaxStatus()", 1500);</script>
  </ui:define>
+ <!-- ************************************************************************ -->
  <ui:define name="content">
   <p id="session_expired_button">
    <h:graphicImage class="multi-pass-required" value="/resources/img/#{config['IMG.MULTIPASS']}" />
@@ -36,4 +37,5 @@ xmlns:p="http://primefaces.org/ui">
    <span class="multi-pass-required-text">#{txt['SESSION.PERMISSION_DETAILS']}</span>
   </p>
  </ui:define>
+ <!-- ************************************************************************ -->
 </ui:composition>
