--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -26,8 +26,7 @@ xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/htm
 xmlns:p="http://primefaces.org/ui">
  <ui:define name="header_text">
   <span class="error"></span>
-  <script type="text/javascript">synctime=false; jQuery.ajaxSetup({ error: handleXhrError }); function
-  handleXhrError(xhr){}; setTimeout("endAjaxStatus()", 200);</script>
+  <script type="text/javascript">synctime=false;setTimeout("endAjaxStatus()", 1500);</script>
  </ui:define>
  <ui:define name="content">
   <p id="session_expired_button">
