--- a/src/main/webapp/user_rights.xhtml
+++ b/src/main/webapp/user_rights.xhtml
@@ -226,7 +226,7 @@ xmlns:p="http://primefaces.org/ui">
       </h:panelGrid>
       <p:commandButton id="insertBut" value="#{txt['RIGHTS.INSERT']}" update="rights"
       actionListener="#{rights_bean.insertScenarioRights}" disabled="#{rights_bean.disableSave}"
-      oncomplete="dlg.hide(); context_tooltip(); hide_message_timeout()" />
+      oncomplete="dlg.hide(); context_tooltip(); hideMessageTimeout()" />
      </p:dialog>
      <!-- ######################################################################### -->
      <p:dialog header="#{txt['RIGHTS.INSERT_LECTURER']}" widgetVar="instr" resizable="false">
@@ -238,7 +238,7 @@ xmlns:p="http://primefaces.org/ui">
       </h:panelGrid>
       <p:commandButton id="insertBut2" value="#{txt['RIGHTS.INSERT']}" update="lecturerList rights"
       actionListener="#{rights_bean.insertLecturer}"
-      oncomplete="instr.hide(); context_tooltip(); hide_message_timeout()" />
+      oncomplete="instr.hide(); context_tooltip(); hideMessageTimeout()" />
      </p:dialog>
      <!-- ######################################################################### -->
      <!-- delete lecturer user dialog -->
@@ -252,7 +252,7 @@ xmlns:p="http://primefaces.org/ui">
       <br />
       <p:commandButton id="deleteButton" value="#{txt['DELETE']}" update="lecturerList rights"
       style="margin:5px" onclick="deleteInstr.hide(); context_tooltip()"
-      actionListener="#{rights_bean.deleteSelectedLecturer}" oncomplete="hide_message_timeout()" />
+      actionListener="#{rights_bean.deleteSelectedLecturer}" oncomplete="hideMessageTimeout()" />
       <p:commandButton id="cancelButton" value="#{txt['CANCEL']}" style="margin:5px"
       onclick="deleteInstr.hide(); context_tooltip()" />
      </p:dialog>
@@ -266,7 +266,7 @@ xmlns:p="http://primefaces.org/ui">
       <br />
       <p:commandButton id="deleteButton2" value="#{txt['DELETE']}"
       actionListener="#{rights_bean.deleteSelectedRight}" update="rights" style="margin:5px"
-      onclick="deleteRight.hide(); context_tooltip();" oncomplete="hide_message_timeout()" />
+      onclick="deleteRight.hide(); context_tooltip();" oncomplete="hideMessageTimeout()" />
       <p:commandButton id="cancelButton2" value="#{txt['CANCEL']}" style="margin:5px"
       onclick="deleteRight.hide(); context_tooltip()" />
      </p:dialog>
